update authentication overview content and links

--- a/docs/authentication/overview.mdx
+++ b/docs/authentication/overview.mdx
@@ -9,7 +9,7 @@ Clerk supports multiple authentication strategies so that you can implement the 
 
 ## Configuration
 
-Clerk's configuration settings affect how the users of your application can sign up and sign in and which attributes are editable via their user profile. You can find these settings under the **User & Authentication** section in your [Clerk Dashboard](https://dashboard.clerk.dev/).
+Clerk's configuration settings affect how the users of your application can [sign up](/docs/authentication/configuration/sign-up-options) and [sign in](/docs/authentication/configuration/sign-in-options) and which attributes are editable via their user profile. You can also manage [user sessions](/docs/authentication/configuration/session-options), [control who gets access](/docs/authentication/configuration/allowlist) to your application, and [customize the email & SMS messages](/docs/authentication/configuration/email-options) that are sent by Clerk during authentication flows. All of these settings can be found under the **User & Authentication** section in your [Clerk Dashboard](https://dashboard.clerk.dev/).
 
 Check out our detailed guide for information on [how to set up your application](/docs/authentication/set-up-your-application).
 
