--- a/docs/authentication/overview.mdx
+++ b/docs/authentication/overview.mdx
@@ -1,9 +1,9 @@
 ---
-title: Sign-up & Sign-in
+title: Sign-up & Sign-in Overview
 description: Learn how to configure authentication and user management for your Clerk application.
 ---
 
-# Sign-up & Sign-in
+# Overview
 
 Clerk supports multiple authentication strategies so that you can implement the strategy that makes sense for *your* users. You can use Clerk's [hosted pages](/docs/authentication/using-clerk-hosted-pages), [pre-built components](/docs/authentication/components/overview), or [build your own custom flows](/docs/custom-flows/overview).
 
