add links to backend references

--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -13,7 +13,7 @@ All examples assume you have an instance of the `Clerk::SDK`:
 sdk = Clerk::SDK.new
 ```
 
-## Allowlist identifiers
+## [Allowlist identifiers](https://clerk.com/docs/reference/backend-api/tag/Allow-list-Block-list)
 
 Retrieve the list of allowlist identifiers.
 
@@ -41,7 +41,7 @@ Toggle allowlist-only sign-ups on/off.
 sdk.allowlist.update(restricted_to_allowlist: true)
 ```
 
-## Clients
+## [Clients](https://clerk.com/docs/reference/backend-api/tag/Clients)
 
 Retrieve a single client by its ID, if the ID is valid. Throws an error otherwise.
 
@@ -61,7 +61,7 @@ Verify the JWT and return the client.
 sdk.clients.verify_token("jwt")
 ```
 
-## Emails
+## [Emails](https://clerk.com/docs/reference/backend-api/tag/Emails)
 
 Send an email message to an email address ID belonging to another user.
 
@@ -74,7 +74,7 @@ sdk.emails.create(
 )
 ```
 
-## Sessions
+## [Sessions](https://clerk.com/docs/reference/backend-api/tag/Sessions)
 
 Retrieve a single session by its ID, if the ID is valid. Throws an error otherwise.
 
@@ -100,7 +100,7 @@ Verify whether a session with a given ID corresponds to the provided session tok
 sdk.sessions.verify_token("sess_xyz", "jwt")
 ```
 
-## SMS Messages
+## [SMS Messages](https://clerk.com/docs/reference/backend-api/tag/SMS-Messages)
 
 Send an SMS message to a phone number ID belonging to another user.
 
@@ -108,7 +108,7 @@ Send an SMS message to a phone number ID belonging to another user.
 sdk.sms_messages.create(phone_number_id: "idn_xyz", message: "Welcome!")
 ```
 
-## Users
+## [Users](https://clerk.com/docs/reference/backend-api/tag/Users)
 
 Retrieves a list of users.
 
