Added unsafeMetadata prop to docs

--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -158,5 +158,13 @@ All props below are optional.
         <>The full URL or path to navigate after a successful sign up.</>,
       ],
     },
+    {
+      cells: [
+        <code>unsafeMetadata</code>,
+        <code>object</code>,
+        <>An object with the key and value for unsafeMetadata that will be saved to the user after signUp. IE, `{{ "company": "companyID1234" }}`</>,
+      ],
+    },
+
   ]}
 />
