--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -133,9 +133,10 @@ In addition to the Hosted Pages, Clerk also offers a set of [prebuilt components
   ```tsx copy filename="/pages/sign-up/[[...index]].tsx"
   import { SignUp } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignUp />;
-  }
+  const SignUpPage = () => (
+    <SignUp path="/sign-up" routing="path" signInUrl="/sign-in" />
+  );
+  export default SignUpPage;
   ```
 </CodeBlockTabs>
 
@@ -154,9 +155,10 @@ In addition to the Hosted Pages, Clerk also offers a set of [prebuilt components
   ```tsx copy filename="/pages/sign-in/[[...index]].tsx"
   import { SignIn } from "@clerk/nextjs";
 
-  export default function Page() {
-    return <SignIn />;
-  }
+  const SignInPage = () => (
+    <SignIn path="/sign-in" routing="path" signUpUrl="/sign-up" />
+  );
+  export default SignInPage;
   ```
 </CodeBlockTabs>
 
