--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -162,7 +162,9 @@ All props below are optional.
       cells: [
         <code>unsafeMetadata</code>,
         <code>object</code>,
-        <>An object with the key and value for unsafeMetadata that will be saved to the user after signUp. IE, `{{ "company": "companyID1234" }}`</>,
+        <>
+          An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. <code>{ "company": "companyID1234" }</code>
+        </>,
       ],
     },
 
