--- a/docs/components/authentication/sign-up.mdx
+++ b/docs/components/authentication/sign-up.mdx
@@ -163,7 +163,7 @@ All props below are optional.
         <code>unsafeMetadata</code>,
         <code>object</code>,
         <>
-          An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. <code>{ "company": "companyID1234" }</code>
+          An object with the key and value for unsafeMetadata that will be saved to the user after sign up.<br />E.g. <code>\{ "company": "companyID1234" \}</code>
         </>,
       ],
     },
