--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -143,7 +143,7 @@ In addition to the Hosted Pages, Clerk also offers a set of [prebuilt components
 
 
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
-  ```tsx copy filename="app/sign-in/page.tsx"
+  ```tsx copy filename="app/sign-in/[[...sign-in]]/page.tsx"
   import { SignIn } from "@clerk/nextjs";
 
   export default function Page() {
