minor change to force a preview-deploy

--- a/docs/advanced-usage/multi-domain.mdx
+++ b/docs/advanced-usage/multi-domain.mdx
@@ -15,9 +15,10 @@ Having multiple domains for your instance enables you to have central authentica
 
 There is always a primary domain, but there can be many satellite domains.
 
-The primary domain is the source of truth for the user's authentication state. Users must complete the sign-in flow on this domain, either using Clerk’s `<SignIn/>` component or our `useSignIn()` hook.
+The primary domain is the source of truth for the user's authentication state. Users must complete the sign-in flow on this domain, either using Clerk’s [`<SignIn />`](/docs/authentication/components/sign-in) component or our [`useSignIn()`](/docs/custom-flows/use-sign-up#use-sign-in) hook.
 
 As for satellite domains, When users initially request one, they are transparently redirected through the primary domain to determine the authentication state. If users want to sign-in, they must be redirected to a sign-in flow hosted on the primary domain, then redirected back.
+
 
 ## How to set up a multi domain project?
 
