--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -6,60 +6,196 @@ description: The Account Portal offers a comprehensive solution for managing use
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 
-# Introduction
-
-The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required. 
+The Account Portal in Clerk is a powerful feature that allows you to streamline the sign-in, sign-up, and user profile management experience for your users, all while maintaining seamless integration with your application without having to build your own components or host your own pages.
 
 ![Account Portal](/docs/images/account-portal/account_portal_splash.png)
 
-# Getting started
+# Why use the Account Portal?
 
-To use the Account Portal, add Clerk to your application and protect your pages. Any time an unauthenticated user attempts to access a protected page in your application, they will automatically get redirected to the Account Portal pages to Sign in.
+The Account Portal provides all pages out of the box hosted on Clerk servers for you and requires minimal setup to get started, if you’re looking for the fastest way to get your application up and running, then this is a great choice. 
 
-Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](/docs/references/nextjs/auth-middleware), React [Control Components](/docs/components/overview) or [ClerkJS SDK](/docs/references/javascript/overview).
+However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our embedded components or custom flows instead.
 
+# How the Account Portal works
 
-# Features overview
+The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application and users are automatically redirected to and from your application for a seamless authentication experience.
 
-## Dedicated hosted pages
+For each application environment, Clerk provides out-of-the-box pages including sign-up, sign-in, user profiles, organization profiles, and an organization creation flow.
 
-For every instance, Clerk offers sign-up, sign-in, and user profile pages out of the box. Additionally, if you are using our Organizations feature, you will also get the organization profile page 
+For development environments, Clerk will issue you a randomly generated domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following:
 
-For development instances, Clerk will issue you a domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following: 
+```
+<https://accounts>.[your-domain].com/sign-in
+<https://accounts>.[your-domain].com/sign-up
+<https://accounts>.[your-domain].com/user
+<https://accounts>.[your-domain].com/organization
+<https://accounts>.[your-domain].com/create-organization
 
-```sh 
-https://accounts.[your-domain].com/sign-in
-https://accounts.[your-domain].com/sign-up
-https://accounts.[your-domain].com/user
-https://accounts.[your-domain].com/organization
-https://accounts.[your-domain].com/create-organization
-``` 
+```
 
+You can access these links via the 'pages' tab under Account Portal in your Clerk dashboard.
 
-<Callout type="info" emoji="ℹ️">
-Note that when you go to production, this is why Clerk requires adding the `accounts` CNAME record as part of your DNS settings. If you do not want to do this and are using your own components, you may disable the Account Portal pages via the 'Danger' tab.
-</Callout>
+# Getting Started with the Account Portal
 
-## Custom redirects
+To integrate the Account Portal into your application, all you need to do is add the `<ClerkProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
 
+- **Next.js**
+    
+    
+    1. Wrap your app with <ClerkProvider />
+    
+    | Pages | App Router |
+    | --- | --- |
+    | 
+    // page/_app.tsx
+    import { ClerkProvider } from "@clerk/nextjs";
+    import type { AppProps } from "next/app";
+     
+    function MyApp({ Component, pageProps }: AppProps) {
+      return (
+        <ClerkProvider>
+          <Component {...pageProps} />
+        </ClerkProvider>
+      );
+    }
+     
+    export default MyApp; | // app/layout.tsx
+    import { ClerkProvider } from '@clerk/nextjs'
+     
+    export const metadata = {
+      title: 'Next.js 13 with Clerk',
+    }
+     
+    export default function RootLayout({
+      children,
+    }: {
+      children: React.ReactNode
+    }) {
+      return (
+        <ClerkProvider>
+          <html lang="en">
+            <body>{children}</body>
+          </html>
+        </ClerkProvider>
+      )
+    } |
+    
+    1. Specify your protected pages that will not require a user to be authenticated, all other pages in your application will require the user to be signed in.
+    
+    ```tsx
+    // middleware.tsx
+    
+    import { authMiddleware } from "@clerk/nextjs";
+    
+    // This example protects all routes including api/trpc routes
+    // Please edit this to allow other routes to be public as needed.
+    // See https://clerk.com/docs/nextjs/middleware for more information about configuring your middleware
+    
+    export default authMiddleware({
+    
+        publicRoutes: ['/publicly-available-page'],
+      });
+    
+    export const config = {
+      matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
+    };
+    ```
+    
+    1. If you are not using middleware or want to specify any specific situations on the frontend within a public page where you need to leverage the user’s auth state, then you can use our control components like so:
+    
+    ```jsx
+    // index.tsx
+    
+    import { Inter } from 'next/font/google'
+    import styles from '@/styles/Home.module.css'
+    import { UserButton, SignInButton, SignedIn, SignedOut, RedirectToSignIn } from '@clerk/nextjs'
+    
+    const inter = Inter({ subsets: ['latin'] })
+    
+    export default function Home() {
+      return (
+        <>
+          <main className={`${styles.main} ${inter.className}`}>
+    
+            <SignedOut>
+            <RedirectToSignIn/>
+            </SignedOut>
+    
+            <SignedIn>
+            <UserButton />
+            </SignedIn>
+    
+          </main>
+        </>
+      )
+    }
+    ```
+    
+    <aside>
+    💡 In this example, we are using <RedirectToSignIn />, but you can also use <RedirectToSignUp /> to take customers directly to the ‘Sign Up’ page.
+    
+    </aside>
+    
+- **React**
+    
+    // app.js
+    
+    wrap your app with ClerkProvider and set the control components:
+    
+    ```
+    import React from "react";
+    import "./App.css";
+    import {
+      ClerkProvider,
+      SignedIn,
+      SignedOut,
+      UserButton,
+      RedirectToSignIn
+    } from "@clerk/clerk-react";
+    
+    if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+      throw "Missing Publishable Key"
+    }
+    
+    const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
+    
+    function App() {
+      return (
+        <ClerkProvider publishableKey={clerkPubKey} >
+          <SignedIn>
+    	      <Welcome />
+          </SignedIn>
+          <SignedOut>
+            <RedirectToSignIn />
+          </SignedOut>
+        </ClerkProvider>
+      );
+    }
+    
+    function Welcome() {
+      return <div>Hello you are signed in <UserButton /></div> ;
+    }
+    
+    export default App;
+    ```
+    
+- **ClerkJS**
+    
+    // app.js
+    
+    use the redirectTosignIn() function
+    
+    ```
+    
+    if (!Clerk.user) {
+    	window.Clerk.redirectToSignIn();
+    }
+    
+    ```
+    
 
-With the Account Portal, we default the user back to where they came from after a successful auth event (sign in or sign up) and pass this parameter via a `redirect_url` query param.
+Once this is set up, all you have to do is fire up your application. Clerk will automatically redirect your users to the Account Portal Sign In / Sign Up pages and back to your application  with an active session once they have successfully authenticated themselves.
 
-For situations where this may not be possible, Clerk defaults to your application homepage and expects the appropriate redirects will kick in. You can also specify default fallbacks directly in the dashboard as well. 
+### Dynamic Development Host Detection
 
-- **After sign-up fallback**: Define the landing page or a specific section of your application where users should be redirected to after successfully creating a new account.
-- **After sign-in fallback**: Define the landing page or a specific section of your application where users should be directed after a successful sign-in.
-- **After Logo Click**: Specify the destination page or action users should be redirected to after they click on your logo from the Account Portal pages.
-
-
-## Customization
-
-The Account Portal also offers a limited set of capabilities to align the visual appearance of the pages with your application's branding and design. This includes the ability to customize the colors, font and button weights.
-
-If you’d rather a precise level of customization through code to match your styling - it is recommended that you use Clerk's embedded components leveraging the [appearance prop](/docs/components/customization/overview) instead.
-
-
-<Callout type="info" emoji="ℹ️">
-Clerk is actively working on improving the capabilities here, so if you have any specific requests - please reach out!
-</Callout>
-
+For development environments, the development host is dynamically detected at runtime. We tie it to your client browser and store it as the ‘home origin’ for your application (e.g. localhost:3000). In production, we will use your application homepage as the ‘home origin’.
