--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -4,7 +4,7 @@ description: The Account Portal offers a comprehensive solution for managing use
 ---
 
 import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
+import { Tab, Tabs } from 'nextra-theme-docs';
 
 The Account Portal in Clerk is a powerful feature that allows you to streamline the sign-in, sign-up, and user profile management experience for your users, all while maintaining seamless integration with your application without having to build your own components or host your own pages.
 
@@ -24,7 +24,7 @@ For each application environment, Clerk provides out-of-the-box pages including 
 
 For development environments, Clerk will issue you a randomly generated domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following:
 
-```
+```sh
 <https://accounts>.[your-domain].com/sign-in
 <https://accounts>.[your-domain].com/sign-up
 <https://accounts>.[your-domain].com/user
@@ -44,10 +44,9 @@ To integrate the Account Portal into your application, all you need to do is add
     
     1. Wrap your app with <ClerkProvider />
     
-    | Pages | App Router |
-    | --- | --- |
-    | 
-    // page/_app.tsx
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
+```typescript filename="page/_app.tsx" copy
+
     import { ClerkProvider } from "@clerk/nextjs";
     import type { AppProps } from "next/app";
      
@@ -58,8 +57,10 @@ To integrate the Account Portal into your application, all you need to do is add
         </ClerkProvider>
       );
     }
-     
-    export default MyApp; | // app/layout.tsx
+```
+
+```typescript filename="app/layout.tsx" copy   
+    export default MyApp;
     import { ClerkProvider } from '@clerk/nextjs'
      
     export const metadata = {
@@ -78,12 +79,12 @@ To integrate the Account Portal into your application, all you need to do is add
           </html>
         </ClerkProvider>
       )
-    } |
-    
+    } 
+```
+  </CodeBlockTabs>
     1. Specify your protected pages that will not require a user to be authenticated, all other pages in your application will require the user to be signed in.
     
-    ```tsx
-    // middleware.tsx
+    ```typescript filename="middleware.tsx" copy
     
     import { authMiddleware } from "@clerk/nextjs";
     
@@ -103,8 +104,7 @@ To integrate the Account Portal into your application, all you need to do is add
     
     1. If you are not using middleware or want to specify any specific situations on the frontend within a public page where you need to leverage the user’s auth state, then you can use our control components like so:
     
-    ```jsx
-    // index.tsx
+    ```typescript filename="index.tsx" copy
     
     import { Inter } from 'next/font/google'
     import styles from '@/styles/Home.module.css'
@@ -130,19 +130,17 @@ To integrate the Account Portal into your application, all you need to do is add
       )
     }
     ```
-    
-    <aside>
-    💡 In this example, we are using <RedirectToSignIn />, but you can also use <RedirectToSignUp /> to take customers directly to the ‘Sign Up’ page.
-    
-    </aside>
-    
+
+    <Callout type="info" emoji="💡">
+     In this example, we are using <RedirectToSignIn />, but you can also use <RedirectToSignUp /> to take customers directly to the ‘Sign Up’ page.
+    </Callout>
+
 - **React**
     
-    // app.js
     
     wrap your app with ClerkProvider and set the control components:
     
-    ```
+    ```javascript filename="app.js" copy
     import React from "react";
     import "./App.css";
     import {
@@ -181,11 +179,10 @@ To integrate the Account Portal into your application, all you need to do is add
     
 - **ClerkJS**
     
-    // app.js
     
     use the redirectTosignIn() function
     
-    ```
+    ```javascript filename="app.js" copy
     
     if (!Clerk.user) {
     	window.Clerk.redirectToSignIn();
