--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -42,7 +42,7 @@ To integrate the Account Portal into your application, all you need to do is add
 - **Next.js**
     
     
-    1. Wrap your app with <ClerkProvider />
+    1. Wrap your app with `<ClerkProvider />`
     
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```typescript filename="page/_app.tsx" copy
