--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -37,7 +37,7 @@ You can access these links via the 'pages' tab under Account Portal in your Cler
 
 # Getting Started with the Account Portal
 
-To integrate the Account Portal into your application, all you need to do is add the `<ClerkProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
+To integrate the Account Portal into your application, all you need to do is add the `<ClerksProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
 
 - **Next.js**
     
