--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -37,12 +37,12 @@ You can access these links via the 'pages' tab under Account Portal in your Cler
 
 # Getting Started with the Account Portal
 
-To integrate the Account Portal into your application, all you need to do is add the `<ClerksProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
+To integrate the Account Portal into your application, all you need to do is add the `<ClerkProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
 
 - **Next.js**
     
     
-    1. Wrap your app with `<ClerksProvider />`
+    1. Wrap your app with `<ClerkProvider />`
     
 <CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```typescript filename="page/_app.tsx" copy
@@ -132,7 +132,7 @@ To integrate the Account Portal into your application, all you need to do is add
     ```
 
     <Callout type="info" emoji="💡">
-     In this example, we are using <RedirectToSignIn />, but you can also use <RedirectToSignUp /> to take customers directly to the ‘Sign Up’ page.
+     In this example, we are using `<RedirectToSignIn />`, but you can also use `<RedirectToSignUp />` to take customers directly to the ‘Sign Up’ page.
     </Callout>
 
 - **React**
