update setup guide for more accurate user flow

--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -75,4 +75,14 @@ Creating a Clerk account and using it in your apps can be done in three steps:
       <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
     </div>
   </div>
+
+  ### Learn about authentication
+
+  Clerk supports multiple authentication strategies so that you can implement the strategy that makes sense for your users. These strategies affect how the users of your application can sign up and sign in and which attributes are editable via their user profile. You can learn more in our [authentication guide](/docs/authentication/overview).
+
+  ### Customize your application
+
+  Clerk provides a set of [components](/docs/components/overview) that you can use to build *your* application. These components are highly customizable and can be used to build a variety of user flows. You can learn more about Clerk's components in our [components guide](/docs/components/overview).
+
+  If our prebuilt components don't meet your specific needs or you require more control over the authentication flow, Clerk enables you to build fully custom sign-up and sign-in flows. You can learn more about building custom flows in our [custom flows guide](/docs/custom-flows/overview).
 </Steps>
