--- a/docs/account-portal/custom-redirects.mdx
+++ b/docs/account-portal/custom-redirects.mdx
@@ -1,26 +1,32 @@
-# Customizing your Account Portal Redirects
+---
+title: Customizing your Redirects
+description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+---
+import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+import { Steps, Tab, Tabs } from 'nextra-theme-docs';
 
-When you set up the Account Portal, Clerk will use your application homepage as the default to redirect users after they sign in to or sign up for your application. If you want to override the defaults or programmatically define your redirect paths you can do that as well via your application. 
+# Customizing your Account Portal redirects
 
-For example, if you wanted to redirect your users to `/dashboard` when they sign in, and `/onboarding` when they sign up, this is how you would proceed:
+Clerk automatically redirects users after sign-in or sign-up back to where they came from by appending a `redirect_url` query param on the Account Portal page. 
 
-## **************Next.js Middleware**************
+If you want to customize this and, for example, redirect users to `/dashboard` on sign-in and `/onboarding` on sign-up this is easily done as well. 
 
-### ********************************************Environment Variables********************************************
 
-If using Clerk Middleware with Next.js - you can define it directly environment variables or explicitly in your middleware code as well.
+## Next.js Middleware
 
-1. NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
-2. NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
 
-<aside>
-💡 Note, that using routing middleware means that users will be redirected before getting to the app, thus this is the only way to ensure users are redirected correctly. This applies equally to any other middleware tooling you may be using.
+**Environment Variables**
 
-</aside>
+First, you can define the paths directly in the environment variables.
 
-### afterAuth() Function
+```sh
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/dashboard
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/onboarding
+```
 
-If you want a more application level, you can also use the ‘afterAuth()’ function the Clerk Middleware and plug in custom logic to decide where to direct a user between Sign In and Sign Up, and the redirect URL as well, like so:
+**afterAuth() Function**
+
+If you want a more programmatically generated redirect option, you can also use the ‘afterAuth()’ function from our Clerk Middleware.
 
 ```tsx
 export default authMiddleware({
@@ -34,54 +40,71 @@ export default authMiddleware({
       }
     }
   },
-  publicRoutes: ["/signedout", "/signmein"],
+  publicRoutes: ["/publicly-available-pages"],
 });
 ```
 
-## Control Components ************************
+<Callout type="info" emoji="💡">
+  Note that, if configured, - the afterAuth() function will always take precedence over the environment variables.
+</Callout>
 
- You can also explicitly define the redirect paths via the appropriate props in the components:
 
-1. `<ClerkProvider afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>`
-2. `<RedirectToSignIn afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>`
+## Control Components
 
-In the case that you are using a Sign In (or Sign Up) button, say from your marketing website, you can also pass through the props into those components:
+If you're not using Middleware, you can also explicitly define the redirect paths by passing the `afterSignInUrl` and `afterSignUpUrl` props in the respective components:
 
-1. `<SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>`
-2. `<SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>`
+```javascript copy
+function App() {
+  return (
+    <ClerkProvider publishableKey={clerkPubKey} afterSignInUrl={'/dashboard'} afterSignUpUrl={'/onboarding'} >
+      <SignedIn>
+        <Welcome />
+      </SignedIn>
+      <SignedOut>
+        <RedirectToSignIn afterSignInUrl={'/dashboard'} afterSignUpUrl={'/onboarding'} />
+      </SignedOut>
+    </ClerkProvider>
+  );
+}
+```
 
-<aside>
-💡 Child component props will always take precedence over parent component props.
+<Callout type="info" emoji="💡">
+Note that, if configured, `RedirectToSignIn` or `RedirectToSignUp` child components will always take precedence over `ClerkProvider`. 
+</Callout>
 
-</aside>
 
-## Order of precedence
+## Button Components
 
-Clerk’s redirects follow the standard hierarchy from local to global, based on which approach you take - this is the order of precedence:
+In the case that you are using a Sign In (or Sign Up) button, say from your marketing website, you can also pass through the props into those components. We recommend defining both AfterSignInUrl and AfterSignupUrl redirects in each button as some users may choose to sign up instead after attempting to sign in.
 
-- Middleware
-    - AfterAuth()
-    - Environment Variables
-    - Redirect back to where the user came from
+```javascript copy
 
-- Component Props
-    - RedirectToSignIn props
-    - ClerkProvider props
-    - Redirect back to where the user came from
+function App() {
+  return (
+        <SignInButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+        <SignUpButton afterSignInUrl='/dashboard' afterSignUpUrl='/onboarding'>
+  );
+}
 
-## ******************Dashboard Fallbacks******************
+```
+
+## Dashboard Fallbacks
 
 If you provide users with a direct link to the account portal pages, you can specify the redirects as a fallback in the dashboard as well. 
 
-Note, while we provide this functionality as a fallback **we do not recommend** configuring this through the dashboard and encourage you to specify redirects in your application flows instead.
+<Callout type="info" emoji="💡">
+Note that, while we provide this functionality as a fallback **we do not recommend** configuring this through the dashboard and encourage you to specify redirects in your application flows instead. 
+</Callout>
 
-1. For development, set your static fallback [localhost](http://localhost) that we will use if we are unable to retrieve a dev browser for your client. In production, this will always be your application homepage. 
 
-    
-    ![Screenshot 2023-08-23 at 8.17.34 AM.png](Account%20Portal%20Integration%20Guide%2008567f434a814a328015b32e9b77cee2/Screenshot_2023-08-23_at_8.17.34_AM.png)
-    
-
-1. Next, you can specify the fallback redirects through the dashboard as well. 
+1. For development, set your static fallback localhost (e.g. http://localhost:3000) that we will use if we are unable to retrieve a dev browser for your client. In production, this will always be your application homepage. 
 
     
-    ![Screenshot 2023-08-23 at 8.25.21 AM.png](Account%20Portal%20Integration%20Guide%2008567f434a814a328015b32e9b77cee2/Screenshot_2023-08-23_at_8.25.21_AM.png)
+    ![Account Portal Paths](/docs/images/account-portal/account_portal_paths.png)
+  
+
+2. Next, you can specify the fallback redirects through the dashboard as well. 
+
+    
+    ![Account Portal Redirects](/docs/images/account-portal/account_portal_redirects.png)
+  
