--- a/docs/account-portal/disable-account-portal.mdx
+++ b/docs/account-portal/disable-account-portal.mdx
@@ -11,6 +11,9 @@ A majority of our customers prefer to leave the Account Portal enabled, even if 
 
 However, if you do want to disable it entirely, you may do so via the ‘danger’ tab in the dashboard. Please ensure that you set up your embedded components (or custom flows) via the instructions below first as this will applying this setting will immediately result in a 404 for all Account Portal pages.
 
+![Disable Account Portal](/docs/images/account-portal/account_portal_disable.png)
+
+
 ## Adding your own Sign In / Sign Up components
 
 If you want to migrate away from the Account Portal or simply just embed your own sign in / sign up components as well. This is easy to do as well, you simply need to add the components and provide the paths. 
