--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -10,6 +10,7 @@ The Account Portal in Clerk is a powerful feature that allows you to streamline 
 
 ![Account Portal](/docs/images/account-portal/account_portal_splash.png)
 
+
 # Why use the Account Portal?
 
 The Account Portal provides all pages out of the box hosted on Clerk servers for you and requires minimal setup to get started, if you’re looking for the fastest way to get your application up and running, then this is a great choice. 
@@ -19,6 +20,8 @@ However, if you require more precise customization or prefer having your applica
 # How the Account Portal works
 
 The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application and users are automatically redirected to and from your application for a seamless authentication experience.
+
+![How the Account Portal works](/docs/images/account-portal/account_portal_how_it_works.png)
 
 For each application environment, Clerk provides out-of-the-box pages including sign-up, sign-in, user profiles, organization profiles, and an organization creation flow.
 
@@ -30,169 +33,6 @@ For development environments, Clerk will issue you a randomly generated domain o
 <https://accounts>.[your-domain].com/user
 <https://accounts>.[your-domain].com/organization
 <https://accounts>.[your-domain].com/create-organization
-
 ```
 
 You can access these links via the 'pages' tab under Account Portal in your Clerk dashboard.
-
-# Getting Started with the Account Portal
-
-To integrate the Account Portal into your application, all you need to do is add the `<ClerkProvider />` to your application and protect your pages via Clerk Middleware OR by using our control components (`<RedirectToSignIn />` `<RedirectToSignUp />` )
-
-- **Next.js**
-    
-    
-    1. Wrap your app with `<ClerkProvider />`
-    
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
-```typescript filename="page/_app.tsx" copy
-
-    import { ClerkProvider } from "@clerk/nextjs";
-    import type { AppProps } from "next/app";
-     
-    function MyApp({ Component, pageProps }: AppProps) {
-      return (
-        <ClerkProvider>
-          <Component {...pageProps} />
-        </ClerkProvider>
-      );
-    }
-```
-
-```typescript filename="app/layout.tsx" copy   
-    export default MyApp;
-    import { ClerkProvider } from '@clerk/nextjs'
-     
-    export const metadata = {
-      title: 'Next.js 13 with Clerk',
-    }
-     
-    export default function RootLayout({
-      children,
-    }: {
-      children: React.ReactNode
-    }) {
-      return (
-        <ClerkProvider>
-          <html lang="en">
-            <body>{children}</body>
-          </html>
-        </ClerkProvider>
-      )
-    } 
-```
-  </CodeBlockTabs>
-    1. Specify your protected pages that will not require a user to be authenticated, all other pages in your application will require the user to be signed in.
-    
-    ```typescript filename="middleware.tsx" copy
-    
-    import { authMiddleware } from "@clerk/nextjs";
-    
-    // This example protects all routes including api/trpc routes
-    // Please edit this to allow other routes to be public as needed.
-    // See https://clerk.com/docs/nextjs/middleware for more information about configuring your middleware
-    
-    export default authMiddleware({
-    
-        publicRoutes: ['/publicly-available-page'],
-      });
-    
-    export const config = {
-      matcher: ["/((?!.*\\..*|_next).*)", "/", "/(api|trpc)(.*)"],
-    };
-    ```
-    
-    1. If you are not using middleware or want to specify any specific situations on the frontend within a public page where you need to leverage the user’s auth state, then you can use our control components like so:
-    
-    ```typescript filename="index.tsx" copy
-    
-    import { Inter } from 'next/font/google'
-    import styles from '@/styles/Home.module.css'
-    import { UserButton, SignInButton, SignedIn, SignedOut, RedirectToSignIn } from '@clerk/nextjs'
-    
-    const inter = Inter({ subsets: ['latin'] })
-    
-    export default function Home() {
-      return (
-        <>
-          <main className={`${styles.main} ${inter.className}`}>
-    
-            <SignedOut>
-            <RedirectToSignIn/>
-            </SignedOut>
-    
-            <SignedIn>
-            <UserButton />
-            </SignedIn>
-    
-          </main>
-        </>
-      )
-    }
-    ```
-
-    <Callout type="info" emoji="💡">
-     In this example, we are using `<RedirectToSignIn />`, but you can also use `<RedirectToSignUp />` to take customers directly to the ‘Sign Up’ page.
-    </Callout>
-
-- **React**
-    
-    
-    wrap your app with ClerkProvider and set the control components:
-    
-    ```javascript filename="app.js" copy
-    import React from "react";
-    import "./App.css";
-    import {
-      ClerkProvider,
-      SignedIn,
-      SignedOut,
-      UserButton,
-      RedirectToSignIn
-    } from "@clerk/clerk-react";
-    
-    if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-      throw "Missing Publishable Key"
-    }
-    
-    const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-    
-    function App() {
-      return (
-        <ClerkProvider publishableKey={clerkPubKey} >
-          <SignedIn>
-    	      <Welcome />
-          </SignedIn>
-          <SignedOut>
-            <RedirectToSignIn />
-          </SignedOut>
-        </ClerkProvider>
-      );
-    }
-    
-    function Welcome() {
-      return <div>Hello you are signed in <UserButton /></div> ;
-    }
-    
-    export default App;
-    ```
-    
-- **ClerkJS**
-    
-    
-    use the redirectTosignIn() function
-    
-    ```javascript filename="app.js" copy
-    
-    if (!Clerk.user) {
-    	window.Clerk.redirectToSignIn();
-    }
-    
-    ```
-    
-
-Once this is set up, all you have to do is fire up your application. Clerk will automatically redirect your users to the Account Portal Sign In / Sign Up pages and back to your application  with an active session once they have successfully authenticated themselves.
-
-### Dynamic Development Host Detection
-
-For development environments, the development host is dynamically detected at runtime. We tie it to your client browser and store it as the ‘home origin’ for your application (e.g. localhost:3000). In production, we will use your application homepage as the ‘home origin’.
