--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -1,15 +1,36 @@
+---
+title: User & Org Profile Pages
+description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+---
+
+import { Tab, Tabs } from 'nextra-theme-docs';
+
 # Navigating to User Profile / Org Profile
 
-In addition to the sign in / sign up pages, the Account Portal also has the User Profile, Organization Profile and Create Organization flow available out of box. Use our Control Components to navigate your users to the appropriate page.
+In addition to the sign in / sign up pages, the Account Portal also has the User Profile, Organization Profile and Create Organization flow available out of box. 
 
-<RedirectToUserProfile />
+You can use our Control Components to navigate your users to the appropriate page.
 
-![Screenshot 2023-08-23 at 1.14.31 PM.png](Account%20Portal%20Integration%20Guide%2008567f434a814a328015b32e9b77cee2/Screenshot_2023-08-23_at_1.14.31_PM.png)
+<Tabs items={["<RedirectToUserProfile />", "<RedirectToOrganizationProfile />","<RedirectToCreateOrganization />"]}>
+<Tab>
 
-<RedirectToOrganizationProfile />
+# `<RedirectToUserProfile />`
 
-![Screenshot 2023-08-23 at 1.14.07 PM.png](Account%20Portal%20Integration%20Guide%2008567f434a814a328015b32e9b77cee2/Screenshot_2023-08-23_at_1.14.07_PM.png)
+![Redirect to User Profile](/docs/images/account-portal/account_portal_user_profile.png)
 
-<RedirectToCreateOrganization />
+</Tab>
+<Tab>
 
-![Screenshot 2023-08-23 at 1.14.19 PM.png](Account%20Portal%20Integration%20Guide%2008567f434a814a328015b32e9b77cee2/Screenshot_2023-08-23_at_1.14.19_PM.png)
+# `<RedirectToOrganizationProfile />`
+
+![Redirect to Org Profile](/docs/images/account-portal/account_portal_org_profile.png)
+
+</Tab>
+<Tab>
+
+# `<RedirectToCreateOrganization />`
+
+![Redirect to User Profile](/docs/images/account-portal/account_portal_create_org.png)
+
+</Tab>
+</Tabs>
