--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -89,3 +89,33 @@ export default function Index() {
 ```
 </Tab>
 </Tabs>
+
+## Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
+  rows={[
+    {
+      cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
+  ]}
+/>
