--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -142,3 +142,33 @@ In some cases you will want to use your own button, or button text. You can do t
   }
   ```
 </CodeBlockTabs>
+
+## Props
+
+<Tables
+  headings={["Name", "Type", "Description"]}
+  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
+  rows={[
+    {
+      cells: [
+        <code>redirectUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
+  ]}
+/>
