--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -108,13 +108,14 @@ With this middleware, your entire application is protected. If you try to access
 
 
 <Callout type="info" emoji="🎉">
- At this point, your application is fully protected by Clerk and uses Clerk's [Hosted Pages](/docs/authentication/using-clerk-hosted-pages) pages that are available out of box. Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.  
+Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
 
 ### Build your own sign in and sign up pages
 
-In addition to the Hosted Pages, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch-all route.
+In addition to the Account Portal, Clerk also offers a set of [prebuilt components](/docs/components/overview) that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />` and `<SignUp />` components by utilizing the Next.js optional catch-all route.
 
 
 
