--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -113,6 +113,12 @@ function Welcome() {
 export default App;
 ```
 
+<Callout type="info" emoji="🎉">
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.  
+Start your React application via `npm run start`, visit `http://localhost:3000`, and sign up to get access to your application.
+</Callout>
+
+
 #### Using a routing library with Clerk
 
 Clerk can work with any routing library. Below is an example of how to use Clerk with React Router and how to embed the Clerk components in your application.
