--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -135,5 +135,19 @@ ReactDOM.render(
         <br/>If no match is made, the redirect is considered unsafe and the default redirect will be used with a warning passed to the console.</>,
       ],
     },
+    {
+      cells: [
+        <code>afterSignInUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign in.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSignUpUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after successful sign up.</>,
+      ],
+    }
   ]}
 />
