--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -211,7 +211,7 @@ If you define an `afterAuth` function, it will run even if the request correspon
       cells: [
         <code>publicRoutes?</code>,
         <code>string[]</code>,
-       "A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object, for example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]` The sign in and sign up URLs are included by default, unless a function is provided."
+       "A list of routes that should be accessible without authentication. You can use glob patterns to match multiple routes or a function to match against the request object. For example: <code>['/foo', '/bar(.*)']</code> or <code>[/^\/foo\/.*$/]</code>.<br />The sign in and sign up URLs are included by default, unless a function is provided."
       ],
     },
     {
