--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -120,7 +120,7 @@ If you define an `afterAuth` function, it will run even if the request correspon
       cells: [
         <code>apiRoutes?</code>,
         <code>string[]</code>,
-        "A list of routes that should return 401. You can use glob patterns to match multiple routes or a function to match against the request object. For example: `['/foo', '/bar(.*)']` or `[/^\/foo\/.*$/]`"
+        "A list of routes that should return 401. You can use glob patterns to match multiple routes or a function to match against the request object. For example: <code>['/foo', '/bar(.*)']</code> or <code>[/^\/foo\/.*$/]</code>"
       ],
     },
     {
