--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -11,7 +11,7 @@ In addition to the sign in / sign up pages, the Account Portal also has the User
 
 You can use our Control Components to navigate your users to the appropriate page.
 
-<Tabs items={["<RedirectToUserProfile />", "<RedirectToOrganizationProfile />","<RedirectToCreateOrganization />"]}>
+<Tabs items={["User Profile Page", "Organization Profile Page","Create Organization Flow"]}>
 <Tab>
 
 # `<RedirectToUserProfile />`
