--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -14,21 +14,21 @@ You can use our Control Components to navigate your users to the appropriate pag
 <Tabs items={["User Profile Page", "Organization Profile Page","Create Organization Flow"]}>
 <Tab>
 
-# `<RedirectToUserProfile />`
+# `<RedirectToUserProfile/>`
 
 ![Redirect to User Profile](/docs/images/account-portal/account_portal_user_profile.png)
 
 </Tab>
 <Tab>
 
-# `<RedirectToOrganizationProfile />`
+# `<RedirectToOrganizationProfile/>`
 
 ![Redirect to Org Profile](/docs/images/account-portal/account_portal_org_profile.png)
 
 </Tab>
 <Tab>
 
-# `<RedirectToCreateOrganization />`
+# `<RedirectToCreateOrganization/>`
 
 ![Redirect to User Profile](/docs/images/account-portal/account_portal_create_org.png)
 
