--- a/docs/account-portal/user-profile-org-profile.mdx
+++ b/docs/account-portal/user-profile-org-profile.mdx
@@ -1,36 +1,45 @@
 ---
-title: User & Org Profile Pages
-description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
+title: User & Organization Pages | Account Portal
+description: In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile and Create Organization flow out of the box. 
 ---
 
-import { Tab, Tabs } from 'nextra-theme-docs';
+# User & Organization Pages
 
-# Navigating to User Profile / Org Profile
+In addition to the sign-in/sign-up pages, the Account Portal also provides the User Profile, Organization Profile, and Create Organization flow out of the box. 
 
-In addition to the sign in / sign up pages, the Account Portal also has the User Profile, Organization Profile and Create Organization flow available out of box. 
-
-You can use our Control Components to navigate your users to the appropriate page.
+You can use Clerk's Control Components to navigate your users to the appropriate page.
 
 <Tabs items={["User Profile Page", "Organization Profile Page","Create Organization Flow"]}>
 <Tab>
+# [`<RedirectToUserProfile/>`](/docs/components/control/redirect-to-userprofile)
 
-# `<RedirectToUserProfile/>`
-
-![Redirect to User Profile](/docs/images/account-portal/account_portal_user_profile.png)
-
+<Images 
+  width={3248}
+  height={1716}
+  src="/docs/images/account-portal/account_portal_user_profile.png"
+  alt="User Profile in Account Portal"
+/>
 </Tab>
+
 <Tab>
+# [`<RedirectToOrganizationProfile/>`](docs/components/control/redirect-to-organization-profile)
 
-# `<RedirectToOrganizationProfile/>`
-
-![Redirect to Org Profile](/docs/images/account-portal/account_portal_org_profile.png)
-
+<Images 
+  width={3248}
+  height={1716}
+  src="/docs/images/account-portal/account_portal_org_profile.png"
+  alt="Organization Profile in Account Portal"
+/>
 </Tab>
+
 <Tab>
+# [`<RedirectToCreateOrganization/>`](docs/components/control/redirect-to-create-organization)
 
-# `<RedirectToCreateOrganization/>`
-
-![Redirect to User Profile](/docs/images/account-portal/account_portal_create_org.png)
-
+<Images 
+  width={3248}
+  height={1716}
+  src="/docs/images/account-portal/account_portal_create_org.png"
+  alt="Create Organization flow in Account Portal"
+/>
 </Tab>
 </Tabs>
