--- a/docs/components/control/redirect-to-signup.mdx
+++ b/docs/components/control/redirect-to-signup.mdx
@@ -3,8 +3,6 @@ title: <RedirectToSignUp />
 description: The `<RedirectToSignUp />` component will navigate to the sign up URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-
 # `<RedirectToSignUp />`
 
 The `<RedirectToSignUp />` component will navigate to the sign up URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
@@ -38,6 +36,7 @@ function MyApp({ Component, pageProps } : AppProps) {
 export default MyApp;
 ```
 </Tab>
+
 <Tab>
 ```tsx copy filename="pages/privatepage.tsx"
 import {
@@ -62,6 +61,7 @@ function PrivatePage() {
 }
 ```
 </Tab>
+
 <Tab>
 ```tsx filename="routes/index.tsx" copy
 import {
@@ -93,13 +93,12 @@ export default function Index() {
 
 <Tables
   headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {
       cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
-        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.</>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
       ],
     },
     {
