--- a/docs/components/unstyled/sign-up-button.mdx
+++ b/docs/components/unstyled/sign-up-button.mdx
@@ -3,10 +3,6 @@ title: <SignUpButton />
 description: The `<SignUpButton />` component is a button that links to the sign-up page or displays the sign-up modal.
 ---
 
-import { Callout } from "nextra-theme-docs";
-import { Tables } from "@/components/Table";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # `<SignUpButton />`
 
 The `<SignUpButton />` component is a button that links to the sign-up page or displays the sign-up modal.
@@ -147,13 +143,12 @@ In some cases you will want to use your own button, or button text. You can do t
 
 <Tables
   headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {
       cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
-        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.</>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
       ],
     },
     {
