--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -61,7 +61,7 @@ export const config = {
 ```
 
 <Callout>
-  This will protect every page by default, including API routes, and cause a redirect to hosted pages. Read more about Clerk's middleware [here](/docs/references/nextjs/auth-middleware).
+  This will protect every page by default, including API routes, and cause a redirect to Clerk's [Account Portal](/docs/account-portal/overview). Read more about Clerk's middleware [here](/docs/references/nextjs/auth-middleware).
 </Callout>
 
 </Steps>
