--- a/docs/references/remix/clerk-app.mdx
+++ b/docs/references/remix/clerk-app.mdx
@@ -89,14 +89,14 @@ export default ClerkApp(App);
       cells: [
         <code>supportEmail?</code>,
         <code>string</code>,
-        "Optional support email for display in authentication screens. Will only affect Clerk Components and not Clerk Hosted pages.",
+        "Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.",
       ],
     },
     {
       cells: [
         <code>localization?</code>,
         <code>object</code>,
-        "Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.",
+        "Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.",
       ],
     },
     {
