--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -1,29 +1,37 @@
 ---
-title: Account Portal
+title: Account Portal Overview
 description: The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required.
 ---
 
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-import { Tab, Tabs } from 'nextra-theme-docs';
+# Overview
 
-The Account Portal in Clerk is a powerful feature that allows you to streamline the sign-in, sign-up, and user profile management experience for your users, all while maintaining seamless integration with your application without having to build your own components or host your own pages.
+The Account Portal in Clerk is a powerful feature that allows you to streamline the sign-in, sign-up, and profile management experience for your users, without having to build your own components or host your own pages.
 
-![Account Portal](/docs/images/account-portal/account_portal_splash.png)
-
+<Images 
+  width={992}
+  height={296}
+  src="/docs/images/account-portal/account_portal_splash.png"
+  alt="Account Portal"
+/>
 
 # Why use the Account Portal?
 
-The Account Portal provides all pages out of the box hosted on Clerk servers for you and requires minimal setup to get started, if you’re looking for the fastest way to get your application up and running, then this is a great choice. 
+The Account Portal provides all the pages your users need to sign-up, sign-in, and manage their accounts, all while maintaining seamless integration with your application. These pages are hosted on Clerk servers for you and they require minimal setup to get started. If you’re looking for the fastest way to get your application up and running, then this is a great choice.
 
-However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our embedded components or custom flows instead.
+However, if you require more precise customization or prefer having your application self-contained, then we would recommend using our [prebuilt components](/docs/components/overview) or [custom flows](/docs/custom-flows/overview) instead.
 
 # How the Account Portal works
 
-The Account Portal uses our Clerk components embedded on dedicated pages hosted for your application and users are automatically redirected to and from your application for a seamless authentication experience.
+The Account Portal uses our [prebuilt Clerk components](/docs/components/overview) embedded on dedicated pages hosted for your application. Users are automatically redirected to and from your application for a seamless authentication experience.
 
-![How the Account Portal works](/docs/images/account-portal/account_portal_how_it_works.png)
+<Images 
+  width={4259}
+  height={2590}
+  src="/docs/images/account-portal/account_portal_how_it_works.png"
+  alt="How the Account Portal works"
+/>
 
-For each application environment, Clerk provides out-of-the-box pages including sign-up, sign-in, user profiles, organization profiles, and an organization creation flow.
+For each application environment, Clerk provides hosted pages including sign-up, sign-in, user profiles, organization profiles, and an organization creation flow.
 
 For development environments, Clerk will issue you a randomly generated domain on "lcl.dev". In production, by default, the URLs for your Account Portal are the following:
 
@@ -35,4 +43,4 @@ For development environments, Clerk will issue you a randomly generated domain o
 <https://accounts>.[your-domain].com/create-organization
 ```
 
-You can access these links via the 'pages' tab under Account Portal in your Clerk dashboard.
+You can access these links under **Account Portal -> Pages** in your Clerk dashboard.
