--- a/docs/components/clerk-provider.mdx
+++ b/docs/components/clerk-provider.mdx
@@ -117,14 +117,14 @@ ReactDOM.render(
       cells: [
         <code>supportEmail?</code>,
         <code>string</code>,
-        <>Optional support email for display in authentication screens. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+        <>Optional support email for display in authentication screens. Will only affect Clerk Components and not Account Portal pages.</>,
       ],
     },
     {
       cells: [
         <code>localization?</code>,
         <code>object</code>,
-        <>Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+        <>Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
       ],
     },
     {
