--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -3,8 +3,6 @@ title: <RedirectToSignIn />
 description: The `<RedirectToSignIn />` component will navigate to the sign in URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
 ---
 
-import { Tab, Tabs } from "nextra-theme-docs";
-
 # `<RedirectToSignIn />`
 
 The `<RedirectToSignIn />` component will navigate to the sign in URL which has been configured in your application instance. The behavior will be just like a server-side (3xx) redirect, and will override the current location in the history stack.
@@ -94,13 +92,12 @@ export default function Index() {
 
 <Tables
   headings={["Name", "Type", "Description"]}
-  headingsMeta={[{maxWidth:'300px'},{maxWidth: '300px'},{maxWidth: '300px'}]}
   rows={[
     {
       cells: [
         <code>redirectUrl</code>,
         <code>string</code>,
-        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value.</>,
+        <>Full URL or path to navigate after successful sign in or sign up. This is the same as setting <code>afterSignInUrl</code> and <code>afterSignUpUrl</code> to the same value.</>,
       ],
     },
     {
