--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -72,7 +72,7 @@ export default config
 
 ### Protecting your pages
 
-Clerk offers Control Components that allow you to protect your pages. Below is an example using Clerk's hosted components and the `<SignedIn />` and `<SignedOut />` control components.
+Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
 ```tsx filename="src/pages/index.tsx" copy
 import React from 'react'
