--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -73,7 +73,7 @@ export default App;
 
 ### Protecting your pages
 
-Clerk offers Control Components that allow you to protect your pages. Below is an example using Clerk's hosted components and the `<SignedIn />` and `<SignedOut />` control components.
+Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
 ```tsx filename="app.tsx" copy
 import React from "react";
