--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -279,7 +279,7 @@ To make sure you are using the embedded components, you will need to update your
 
 #### Client side
 
-Clerk offers Control Components that allow you to protect your pages. Below is a simple example using Clerk's hosted components and the `<SignedIn/>` and `<SignedOut/>` control components.
+Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
 
 ```tsx filename="routes/index.tsx" copy
 import {
