--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -135,14 +135,14 @@ It is absolutely necessary to call this method before using the `Clerk` object i
   cells: [
   <code>appearance</code>,
   <code>Appearance | undefined</code>,
-  <>Optional object to style your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+  <>Optional object to style your Components. Will only affect Clerk Components and not Account Portal pages.</>,
   ],
   },
   {
   cells: [
   <code>localization</code>,
   <code>Localization | undefined</code>,
-  <>Optional object to localize your Components. Will only affect Clerk Components and not Clerk Hosted pages.</>,
+  <>Optional object to localize your Components. Will only affect Clerk Components and not Account Portal pages.</>,
   ],
   },
   {
